k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-Deployment
  namespace: ai-task-plateform
  lables:
    app: redis
spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

  spec:
    containers:
      - name: redis
        image: redis:latest
        ports:
          - containerPort: 6379
        resources:
          requests:
            memory: "128Mi" 
            cpu: "100m"
          limits:
            memory: "256Mi" 
            cpu: "200m"
